add new logo version

--- a/content/_values.yaml
+++ b/content/_values.yaml
@@ -11,7 +11,7 @@ favicon: |-
   <link rel="icon" type="image/png" sizes="32x32" href="/static/img/favicon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/static/img/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/static/img/favicon/favicon-16x16.png">
-logo: /static/img/logo_large.svg
+logo: /static/img/logo/v01.svg
 
 # Structure
 main_menu:
