--- a/content/_values.yaml
+++ b/content/_values.yaml
@@ -3,9 +3,12 @@ author: Thorsten Klein (@iwilltry42)
 title: "@thklein"
 copyright: |-
   Copyright 2020 Thorsten Klein <br>
-  <i class="fa fa-twitter"></i> <a href="https://twitter.com/iwilltry42">@iwilltry42</a> | 
-  <i class="fa fa-github"></i> <a href="https://github.com/iwilltry42">@iwilltry42</a> | 
-  <i class="fa fa-envelope"></i> <a href="mailto:iwilltry42@gmail.com">iwilltry42@gmail.com</a><br>
+  <i class="fa fa-envelope"></i> <a href="mailto:tk@thklein.io">tk@thklein.io</a> |
+  <i class="fa fa-linkedin"></i> <a href="https://www.linkedin.com/in/thorsten-klein-b39520114/">Thorsten Klein</a> |
+  <i class="fa fa-xing"></i> <a href="https://www.xing.com/profile/Thorsten_Klein141/">Thorsten Klein</a> | 
+  <i class="fa fa-twitter"></i> <a href="https://twitter.com/iwilltry42">@iwilltry42</a> |
+  <i class="fa fa-github"></i> <a href="https://github.com/iwilltry42">@iwilltry42</a>
+  <br>
   Powered by <a href="https://github.com/pacha/spekulatio">spekulatio</a> & <a href="https://www.netlify.com/">netlify</a>
 favicon: |-
   <link rel="icon" type="image/png" sizes="32x32" href="/static/img/favicon/favicon-96x96.png">
