add favicons in config

--- a/config.yml
+++ b/config.yml
@@ -10,8 +10,10 @@ params:
 
   defaultTheme: auto
 
-  # assets:
-  #  favicon: 
+  assets:
+    favicon: /static/favicons/favicon.ico
+    favicon16x16: /static/favicons/favicon-16x16.png
+    favicon32x32: /static/favicons/favicon-32x32.png
 
   socialIcons:
     - name: twitter
