update netlify settings

--- a/config.yml
+++ b/config.yml
@@ -34,7 +34,7 @@ params:
       ### Software Development & Operations
       ----
 
-      Welcome to the business site of my life, where I help people, teams and companies make the best out of their infrastructure and development workflows.
+      Welcome to the business site of my life, where I help people, teams and companies to make the best out of their infrastructure and development workflows.
     imageUrl: "logo/logo_only_v01.svg"
     #imageWidth: 2056px
     # imageHeight: 1124px
