--- a/config.yml
+++ b/config.yml
@@ -55,7 +55,7 @@ menu:
   main:
     - name: Portfolio
       url: portfolio
-      pre: <i class="fa fa-picture-o"></i>
+      pre: "<i class='fa fa-picture-o'></i>"
       weight: 1
     - name: Blog
       url: blog
