--- a/config.yml
+++ b/config.yml
@@ -14,6 +14,8 @@ params:
     favicon: favicons/favicon.ico
     favicon16x16: favicons/favicon-16x16.png
     favicon32x32: favicons/favicon-32x32.png
+    apple_touch_icon: favicons/apple-icon.png
+    safari_pinned_tab: favicons/apple-icon.png
 
   socialIcons:
     - name: email
