--- a/config.yml
+++ b/config.yml
@@ -3,6 +3,8 @@ languageCode: en-us
 title: thklein.io
 theme: "PaperMod"
 
+enableRobotsTXT: true
+
 params:
   title: thklein.io
   description: Thorsten Klein Software Development & Operations
