--- a/netlify.toml
+++ b/netlify.toml
@@ -12,3 +12,9 @@ command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
 
 [context.deploy-preview.environment]
 HUGO_VERSION = "0.80.0"
+
+[[plugins]]
+package = "netlify-plugin-checklinks"
+
+[[plugins]]
+package = "@netlify/plugin-sitemap"
