--- a/netlify.toml
+++ b/netlify.toml
@@ -16,5 +16,17 @@ HUGO_VERSION = "0.80.0"
 [[plugins]]
 package = "netlify-plugin-checklinks"
 
+  [plugins.inputs]
+  entryPoints = [
+    "*.html",
+  ]
+  recursive = true
+  pretty = true
+  skipPatterns = [
+    "public/*",
+  ]
+  checkExternal = true
+
+
 [[plugins]]
 package = "@netlify/plugin-sitemap"
