netlify/checklinks: exclude netlify links (to not break deploy previews)

--- a/netlify.toml
+++ b/netlify.toml
@@ -28,6 +28,7 @@ package = "netlify-plugin-checklinks"
     "fontawesome",
     "https://reddit.com/",
     "https://facebook.com",
+    "netlify.app",
   ]
   checkExternal = true
 
