--- a/netlify.toml
+++ b/netlify.toml
@@ -30,6 +30,7 @@ package = "netlify-plugin-checklinks"
     "https://facebook.com",
     "netlify.app",
     "t.co",
+    "iwilltry42/k3d-go",
   ]
   checkExternal = true
 
