add gh sponsors button

--- a/config.yml
+++ b/config.yml
@@ -53,6 +53,8 @@ params:
       ----
 
       Welcome to the business site of my life, where I help people, teams and companies to make the best out of their infrastructure and development workflows.
+
+      <iframe src="https://github.com/sponsors/iwilltry42/card" title="Sponsor iwilltry42" height="225" width="600" style="border: 0;"></iframe>
     imageUrl: "/logo/v01_logo_only.svg"
     imageWidth: 300px
     imageHeight: 300px
@@ -63,6 +65,8 @@ params:
         url: "blog"
       - name: Personal Site
         url: "https://iwilltry42.dev"
+      - name: Sponsor Me on Github
+        url: "https://github.com/sponsors/iwilltry42"
 
 markup:
   highlight:
