--- a/config.yml
+++ b/config.yml
@@ -65,6 +65,8 @@ params:
         url: "https://iwilltry42.dev"
       - name: Sponsor Me on GitHub
         url: "https://github.com/sponsors/iwilltry42"
+      - name: Buy Me a Coffee
+        url: "https://www.buymeacoffee.com/thklein"
 
 markup:
   highlight:
