--- a/netlify.toml
+++ b/netlify.toml
@@ -32,7 +32,8 @@ package = "netlify-plugin-checklinks"
     "t.co",
     "iwilltry42/k3d-go",
     "https://k3d.io/",
-    "https://twitter.com/"
+    "https://twitter.com/",
+    "github.com",
   ]
   checkExternal = true
 
