--- a/config.yml
+++ b/config.yml
@@ -2,3 +2,234 @@ baseURL: https://thklein.io/
 languageCode: en-us
 title: thklein.io
 theme: "hugo-profile"
+
+enableRobotsTXT: true
+enableEmoji: true
+enableInlineShortcodes: true
+ebanleGitInfo: true
+
+defaultContentLanguage: en
+
+languages:
+  en:
+    menu:
+      main:
+        - identifier: blog
+          name: Blog
+          title: Blog Posts
+          url: /blogsen
+          weight: 1
+  de:
+    menu:
+      main:
+        - identifier: blog
+          name: Artikel
+          title: Blog Artikel
+          url: /blogs
+          weight: 1
+
+params:
+  title: thklein.io
+  description: Thorsten Klein Software Development & Operations
+  author: Thorsten Klein
+
+  label:
+    icon: "/logo/v01_logo_only_noshadow.svg"
+
+  favicon: /favicons/favicon.ico
+
+  defaultTheme: auto
+  theme:
+    disableThemeToggle: false
+    # defaultTheme: "light" # dark
+
+  # post settings
+  showReadingTime: true
+  showShareButtons: true
+  showCodeCopyButtons: true
+  showFullTextInRSS: true
+
+  ###############################
+  # Hugo Project Theme Settings #
+  # vvvvvvvvvvvvvvvvvvvvvvvvvvv #
+
+  # font:
+  #   fontSize: 1.5rem # default: 1rem
+  #   fontWeight: 500 # default: 400
+  #   lineHeight: 1 # default: 1.5
+  #   textAlign: right # default: left
+
+  # color preference
+  # color:
+  #   textColor:
+  #   secondaryTextColor:
+  #   backgroundColor:
+  #   secondaryBackgroundColor:
+  #   primaryColor:
+  #   secondaryColor:
+
+  #   darkmode:
+  #     textColor:
+  #     secondaryTextColor:
+  #     backgroundColor:
+  #     secondaryBackgroundColor:
+  #     primaryColor:
+  #     secondaryColor:
+
+  # If you want to customize the menu, you can change it here
+  navbar:
+  #   align: mx-auto # Left: ms-auto | center: mx-auto | right: me-auto | Default: ms-auto
+    brandLogo: "/logo/v01_logo_only_noshadow.svg" # Logo for the brand | default is the favicon variable
+  #   brandName: "Profile" # Brand name for the brand | default is the title variable
+
+  #   menus:
+  #     disableAbout: true
+  #     disableExperience: true
+  #     disableEducation: true
+  #     disableProjects: true
+  #     disableAchievements: true
+  #     disableContact: true
+
+  hero:
+    enable: true
+    intro: Hi, my name is
+    title: Thorsten.
+    subtitle: I help merge the worlds of Dev and Ops.
+    content: |-
+      A passionate backend developer and DevOps enabler with a passion for open-source software.  
+      I help people, teams and organizations to automate and modernize their workflows to achieve maximum performance and convenience.  
+      Need the infrastructure for this first? I can also help creating it, be it on-premises, bare-metal, public, private or hybrid cloud.
+    image: /logo/v01_logo_only_noshadow.svg
+    socialLinks:
+      fontAwesomeIcons:
+        - icon: fab fa-github
+          url: https://github.com/iwilltry42
+        - icon: fab fa-twitter
+          url: https://twitter.com/IWillTry42
+        - icon: fab fa-linkedin
+          url: https://www.linkedin.com/in/thorsten-klein-b39520114
+
+  about:
+    enable: true
+    title: "About Me"
+    image: "/images/me.png"
+    content: |-
+      I'm a software developer and DevOps enabler with a passion for open-source software.  
+      I started my career in a corporate environment during my computer science studies.  
+      After a while I got to work with other companies through my open-source project which led me start freelancing.  
+      It's exciting to work with a diverse set of people, companies and organizations.  
+      Simplifying workflows and automating the boring stuff is one of the key drivers in my work.  
+
+      -
+    skills:
+      enable: true
+      title: "Here's an excerpt of technologies I've worked with so far:"
+      items:
+        - Golang
+        - Python
+        - Bash
+        - Kubernetes
+        - Public Cloud
+        - Private Cloud
+        - Linux
+        - HCI
+
+  experience:
+    enable: true
+    items:
+      - job: DevOps Engineer
+        company: trivago
+        companyUrl: https://trivago.com
+        date: Mar 2018 - Nov 2021
+        featuredLink:
+          enable: true
+          name: Tech Blog Article
+          url: https://example.com
+        info:
+          enable: true
+          content: Full-Time Employee, switched to part-time in early 2021 to build my business
+        content: |-
+          todo
+      - job: Software Developer
+        company: SUSE Rancher
+        companyUrl: https://suse.com
+        date: Apr 2020 - Feb 2022
+        featuredLink:
+          enable: true
+          name: Backstory
+          url: "TODO:"
+        info:
+          enable: true
+          content: Freelancer
+        content: |-
+          todo
+
+  education:
+    enable: true
+    items:
+      - title: "Bachelor of Science"
+      - title: Abi
+
+  projects:
+    enable: true
+    items:
+      - title: k3d
+        content: foobar
+        image: /images/projects/k3d_logo_black_blue.svg
+        featured:
+          name: Website
+          link: https://k3d.io
+        badges:
+          - Go
+          - Kubernetes
+          - Docker
+        links:
+          - icon: fab fa-github
+            url: https://github.com/k3d-io/k3d
+
+  contact:
+    enable: true
+    content: |-
+      I'm always up for a quick chat or a lengthy discussion or knowledge exchange.  
+      Get in touch via social media, or e-mail.
+    email: tk@thklein.io
+    btnName: Send me an E-Mail
+
+  footer:
+    recentPosts: false
+    socialNetworks:
+      github: https://github.com/iwilltry42
+      linkedin: https://www.linkedin.com/in/thorsten-klein-b39520114
+      twitter: https://twitter.com/IWillTry42
+  # ^^^^^^^^^^^^^^^^^^^^^^^^^^^ #
+  # Hugo Project Theme Settings #
+  ###############################
+
+markup:
+  highlight:
+    codeFences: true
+    lineNos: true
+  goldmark:
+    parser:
+      attribute:
+        block: true
+    renderer:
+      hardwraps: true
+      unsafe: true
+
+privacy:
+  disqus:
+    disable: true
+  googleAnalytics:
+    disable: true
+  instagram:
+    disable: true
+  twitter:
+    disable: false
+    enableDNT: true
+    simple: true
+    disableInlineCSS: true
+  vimeo:
+    disable: true
+  youtube:
+    disable: true
