--- a/netlify.toml
+++ b/netlify.toml
@@ -13,29 +13,29 @@ command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
 [context.deploy-preview.environment]
 HUGO_VERSION = "0.101.0"
 
-[[plugins]]
-package = "netlify-plugin-checklinks"
+# [[plugins]]
+# package = "netlify-plugin-checklinks"
 
-  [plugins.inputs]
-  entryPoints = [
-    "*.html",
-  ]
-  recursive = true
-  pretty = true
-  skipPatterns = [
-    "logo/",
-    "https://www.translate-24h.de",
-    "fontawesome",
-    "https://reddit.com/",
-    "https://facebook.com",
-    "netlify.app",
-    "t.co",
-    "iwilltry42/k3d-go",
-    "https://k3d.io/",
-    "https://twitter.com/",
-    "github.com",
-  ]
-  checkExternal = true
+#   [plugins.inputs]
+#   entryPoints = [
+#     "*.html",
+#   ]
+#   recursive = true
+#   pretty = true
+#   skipPatterns = [
+#     "logo/",
+#     "https://www.translate-24h.de",
+#     "fontawesome",
+#     "https://reddit.com/",
+#     "https://facebook.com",
+#     "netlify.app",
+#     "t.co",
+#     "iwilltry42/k3d-go",
+#     "https://k3d.io/",
+#     "https://twitter.com/",
+#     "github.com",
+#   ]
+#   checkExternal = true
 
 
 [[plugins]]
