--- a/config.yml
+++ b/config.yml
@@ -1,155 +1,191 @@
+title: thklein.io
 baseURL: https://thklein.io/
 languageCode: en-us
-title: thklein.io
-theme: "hugo-PaperMod"
+theme: "iwilltry42-bilberry"
 
+# Generate the robots.txt file for SEO
 enableRobotsTXT: true
-enableEmoji: true
-enableInlineShortcodes: true
-ebanleGitInfo: true
 
+# Change to one of your content languages defined at the end.
 defaultContentLanguage: en
-languages:
-  en:
-    languageName: English
-    languageAltTitle: English
-    weight: 1
-    menu:
-      main:
-        - name: Portfolio
-          url: portfolio
-          pre: '<i class="far fa-address-card"></i> '
-          weight: 1
-        - name: Blog
-          url: blog
-          pre: '<i class="far fa-comment-alt"></i> '
-          weight: 2
-        - name: Personal Site
-          url: https://iwilltry42.dev
-          pre: '<i class="far fa-user"></i> '
-          weight: 3
-    profileMode:
-      enabled: true
-      title: Thorsten Klein
-      subtitle: |
-        ### Software Development & Operations
-        ----
 
-        Welcome to the business site of my life!
-        I help people, teams and companies to make the best out of their infrastructure and development workflows.
-      imageUrl: "/logo/v01_logo_only.svg"
-      imageWidth: 300px
-      imageHeight: 300px
-      buttons:
-        - name: Portfolio
-          url: "portfolio"
-        - name: Blog
-          url: "blog"
-        - name: Personal Site
-          url: "https://iwilltry42.dev"
-  de:
-    languageName: ":de:"
-    languageAltTitle: Deutsch
-    weight: 2
-    menu:
-      main:
-        - name: Portfolio
-          url: portfolio
-          pre: '<i class="far fa-address-card"></i> '
-          weight: 1
-        - name: Blog
-          url: blog
-          pre: '<i class="far fa-comment-alt"></i> '
-          weight: 2
-        - name: Private Seite
-          url: https://iwilltry42.dev
-          pre: '<i class="far fa-user"></i> '
-          weight: 3
-    profileMode:
-      enabled: true
-      title: Thorsten Klein
-      subtitle: |
-        ### Software Development & Operations
-        ----
+# Enable / Disable Google Analytics statistics for your site
+googleAnalytics: ''
 
-        Willkommen auf meiner Webseite!
-        Ich helfe Personen, Organisationen, Teams und Firmen, das Beste aus ihrer Infrastruktur und ihrer Softwareentwicklung herauszuholen.
-      imageUrl: "/logo/v01_logo_only.svg"
-      imageWidth: 300px
-      imageHeight: 300px
-      buttons:
-        - name: Portfolio
-          url: "portfolio"
-        - name: Blog
-          url: "blog"
-        - name: Private Webseite
-          url: "https://iwilltry42.dev"
+# Enable / Disable comments on the articles via Disqus.
+disqusShortname: ''
 
 
 params:
-  title: thklein.io
-  description: Thorsten Klein Software Development & Operations
+  # Custom CSS / JS modules that will be imported by the template.
+  # Files are relative to the static/ directory or a URL.
+  # Files are imported in the order they appear here, after
+  # theme.css and theme.js, respectively.
+  css_modules: []
+  js_modules: []
+
+  # Description and meta data for the search engines
   author: Thorsten Klein
+  description: Thorsten Klein Software Development & Operations
+  keywords: blog,personal,thklein,devops,cloud,public,private,hybrid,kubernetes,go,golang,python
+  
+  # How many articles should be displayed at once?
+  paginate: 7
 
-  label:
-    icon: "/logo/v01_logo_only_noshadow.svg"
+  # Enable / Disable MathJax
+  enable_mathjax: false
 
-  defaultTheme: auto
+  # Enable / Disable algolia search
+  algolia_search: true
+  algolia_appId: 45CEN6X6AT
+  algolia_apiKey: 16030625f1a4d0dd3b8aefd794fd4cf1
+  algolia_indexName: bilberry-hugo-theme
+  # Set this option to false if you want to search within all articles in all languages at once
+  algolia_currentLanguageOnly: true
 
-  # post settings
-  showReadingTime: true
-  showShareButtons: true
-  showCodeCopyButtons: true
-  showFullTextInRSS: true
+  # Enable / Disable comments on the articles via commento
+  # commentoJsURL: "https://commento.lednerb.de/js/commento.js"
 
-  # others
+  # Enable / Disable Giscus comments
+  giscus: false
+  giscusJsUrl: 'https://giscus.app/client.js'
+  giscusRepository: '[ENTER REPO HERE]'
+  giscusRepositoryId: '[ENTER REPO ID HERE]'
+  giscusMapping: pathname
+  giscusCategory: '[ENTER CATEGORY NAME HERE]'
+  giscusCategoryId: '[ENTER CATEGORY ID HERE]'
+  giscusTheme: light
+  giscusReactions: '1'
+  giscusEmitMetadata: '0'
+  giscusLanguage: en
+  giscusCrossOrigin: anonymous
 
-  assets:
-    favicon: /favicons/favicon.ico
-    favicon16x16: /favicons/favicon-16x16.png
-    favicon32x32: /favicons/favicon-32x32.png
-    apple_touch_icon: /favicons/apple-icon.png
-    safari_pinned_tab: /favicons/apple-icon.png
+  # Enable / Disable Utterances comments
+  utterances: false
+  utterancesJsUrl: 'https://utteranc.es/client.js'
+  utterancesRepository: '[ENTER REPO HERE]'
+  utterancesIssueTerm: pathname
+  utterancesLabel: Comment
+  utterancesTheme: github-light
+  utterancesCrossOrigin: anonymous
 
-  socialIcons:
-    - name: email
-      url: mailto:tk@thklein.io
-    - name: twitter
-      url: https://twitter.com/iwilltry42
-    - name: github
-      url: https://github.com/iwilltry42
-    - name: linkedin
-      url: https://www.linkedin.com/in/thorsten-klein-b39520114/
+  # let hugo automatically resize and crop your images to the correct sizes
+  # NB: When enabled the image files get renamed by adding additional information,
+  #     even if the image has the correct sizes.
+  resizeImages: true
 
-  profileMode:
-    enabled: true
-    
+  # Header configuration
+  # your subtitle if you want to use any
+  subtitle: Hello World! This is the most epic subtitle ever.
+  
+  # if you want to use libravatar or gravatar for the header image
+  avatarEmail: code@lednerb.de
+
+  # set an path to the image file you want to use | overwrites avatar by email
+  customImage: ''
+  # define the icon you want to use for the overlay for the customImage or avatar.
+  overlayIcon: fa-home
+  
+  # always display the top navigation (with pages and search) on non-mobile screens
+  permanentTopNav: false
+
+  # always display the top navigation when scrolling
+  # works only with permanentTopNav = true
+  stickyNav: false
+
+  # show a language chooser in the header
+  showHeaderLanguageChooser: true
+
+  # Content configuration
+  # Enable an optional pinned page to display at the top of the index
+  # pinnedPost: "/article/installing-bilberry-theme/"
+  # Set to true to pin only to the first page, false to all pages
+  # pinOnlyToFirstPage: true
+
+  # enable automatic localization of the article's PublishedDate with momentjs
+  enableMomentJs: true
+  
+  # customize the date format | only works if momentjs is disabled | only works with English month names
+  # you can customize it with the options you find here:
+  # https://gohugo.io/functions/format/#hugo-date-and-time-templating-reference
+  dateFormat: '2006-01-02'
+
+  # display the estimated reading time for an article
+  showReadingTime: false
+
+  # Minimum word count to display the Table of Contents
+  tocMinWordCount: 400
+
+  # Footer configuration
+  showFooter: true
+
+  # How many articles should be displayed at latest posts in the footer?
+  # Set to -1 to hide the 'Latest Posts' column
+  amountLatestPostsInFooter: 7
+
+  # How many categories should be displayed in the footer section?
+  # Set to -1 to hide the 'Categories' column
+  amountCategoriesInFooter: 7
+
+  # show a language chooser in the footer
+  showFooterLanguageChooser: true
+
+  # social media profile urls for the footer links
+  showSocialMedia: true
+
+  # show an archive link in the footer
+  showArchive: false
+
+  # archive grouping: "2006" by year, "2006-01" by month
+  archiveDateGrouping: 2006-01
+
+  # define your links with FontAwesome 5 (only free icons are supported)
+  # all icons https://fontawesome.com/icons?d=gallery&m=free
+  # brand icons https://fontawesome.com/icons?d=gallery&s=brands&m=free
+  socialMediaLinks:
+    - link: 'https://twitter.com/TheRealLednerb'
+      icon: fab fa-twitter
+    - link: 'https://github.com/Lednerb'
+      icon: fab fa-github
+
+  # credits line configuration
+  copyrightBy: by Lednerb
+  copyrightUseCurrentYear: true  # set to true to always display the current year in the copyright
+  copyrightYearOverride: '2017'
+  copyrightUrl: 'https://github.com/Lednerb'
+  creditsText: Bilberry Hugo Theme
+  creditsUrl: 'https://github.com/Lednerb/bilberry-hugo-theme'
+
+# customize your available languages for your multi-lingual site
+# or delete one of the [Languages.xx] blocks to use the theme with only one supported language
+languages:
+  en:
+    weight: 1
+  de:
+    weight: 2
+    title: Mein cooler neuer Blog
+    subtitle: Hallo Welt! Dies ist der epischste Untertitel aller Zeiten.
+
+# don't change anything below
+taxonomies:
+  author: author
+  tag: tags
+  category: categories
+  series: series
+outputs:
+  home:
+    - HTML
+    - JSON
+    - RSS
+  page:
+    - HTML
 
 markup:
-  highlight:
-    codeFences: true
-    lineNos: true
+  defaultMarkdownHandler: goldmark
   goldmark:
-    parser:
-      attribute:
-        block: true
     renderer:
-      hardwraps: true
-      unsafe: true
-
-privacy:
-  disqus:
-    disable: true
-  googleAnalytics:
-    disable: true
-  instagram:
-    disable: true
-  twitter:
-    disable: false
-    enableDNT: true
-    simple: true
-    disableInlineCSS: true
-  vimeo:
-    disable: true
-  youtube:
-    disable: true
+      unsafe: false # Change to 'true' if you need to render raw HTML within your markdown content
+  tableOfContents:
+    endLevel: 5
+    ordered: false
+    startLevel: 2
