--- a/config.yml
+++ b/config.yml
@@ -37,9 +37,9 @@ params:
 
   # Enable / Disable algolia search
   algolia_search: true
-  algolia_appId: 45CEN6X6AT
-  algolia_apiKey: 16030625f1a4d0dd3b8aefd794fd4cf1
-  algolia_indexName: bilberry-hugo-theme
+  algolia_appId: CX3VWXEQMW
+  algolia_apiKey: 2d7f9a8b19a2f4715cfcc95a0937a22a
+  algolia_indexName: thklein.io
   # Set this option to false if you want to search within all articles in all languages at once
   algolia_currentLanguageOnly: true
 
@@ -62,12 +62,6 @@ params:
 
   # Enable / Disable Utterances comments
   utterances: false
-  utterancesJsUrl: 'https://utteranc.es/client.js'
-  utterancesRepository: '[ENTER REPO HERE]'
-  utterancesIssueTerm: pathname
-  utterancesLabel: Comment
-  utterancesTheme: github-light
-  utterancesCrossOrigin: anonymous
 
   # let hugo automatically resize and crop your images to the correct sizes
   # NB: When enabled the image files get renamed by adding additional information,
@@ -76,18 +70,19 @@ params:
 
   # Header configuration
   # your subtitle if you want to use any
-  subtitle: Hello World! This is the most epic subtitle ever.
+  subtitle: "Software Development & Operations"
   
   # if you want to use libravatar or gravatar for the header image
-  avatarEmail: code@lednerb.de
+  avatarEmail: ""
 
   # set an path to the image file you want to use | overwrites avatar by email
-  customImage: ''
+  customImage: 'logo/v01_logo_only_noshadow.svg'
+
   # define the icon you want to use for the overlay for the customImage or avatar.
   overlayIcon: fa-home
   
   # always display the top navigation (with pages and search) on non-mobile screens
-  permanentTopNav: false
+  permanentTopNav: true
 
   # always display the top navigation when scrolling
   # works only with permanentTopNav = true
@@ -111,7 +106,7 @@ params:
   dateFormat: '2006-01-02'
 
   # display the estimated reading time for an article
-  showReadingTime: false
+  showReadingTime: true
 
   # Minimum word count to display the Table of Contents
   tocMinWordCount: 400
@@ -143,16 +138,16 @@ params:
   # all icons https://fontawesome.com/icons?d=gallery&m=free
   # brand icons https://fontawesome.com/icons?d=gallery&s=brands&m=free
   socialMediaLinks:
-    - link: 'https://twitter.com/TheRealLednerb'
+    - link: 'https://twitter.com/iwilltry42'
       icon: fab fa-twitter
-    - link: 'https://github.com/Lednerb'
+    - link: 'https://github.com/iwilltry42'
       icon: fab fa-github
 
   # credits line configuration
-  copyrightBy: by Lednerb
+  copyrightBy: by Thorsten Klein
   copyrightUseCurrentYear: true  # set to true to always display the current year in the copyright
-  copyrightYearOverride: '2017'
-  copyrightUrl: 'https://github.com/Lednerb'
+  copyrightYearOverride: '2022'
+  copyrightUrl: 'https://github.com/thklein-io'
   creditsText: Bilberry Hugo Theme
   creditsUrl: 'https://github.com/Lednerb/bilberry-hugo-theme'
 
@@ -163,8 +158,8 @@ languages:
     weight: 1
   de:
     weight: 2
-    title: Mein cooler neuer Blog
-    subtitle: Hallo Welt! Dies ist der epischste Untertitel aller Zeiten.
+    title: Mein Blog
+    subtitle: Softwareentwicklung & -betrieb
 
 # don't change anything below
 taxonomies:
